[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Torch/torch-lit-basic-2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Torch/torch-base-basic.png" type="Texture" id=2]
[ext_resource path="res://Assets/Torch/torch-unlit-basic.png" type="Texture" id=3]
[ext_resource path="res://Assets/Torch/torch-lit-basic-1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Torch.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "unlit",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "lit",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 8 )

[node name="Torch" type="Node2D"]
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
position = Vector2( 0, -24 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "lit"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -24 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
scale = Vector2( 2, 2 )
shape = SubResource( 3 )

[node name="ExtinguishTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ExtinguishTimer" to="." method="_on_ExtinguishTimer_timeout"]
